Fix Report page misaligned when viewport width <768

--- a/kalite/coachreports/static/css/coachreports/base.css
+++ b/kalite/coachreports/static/css/coachreports/base.css
@@ -18,3 +18,8 @@ select.reports-select {
 #display-topic-report {
     margin-top: 22px;
 }
+
+#display-coach-report{
+    margin-top: 10px;
+
+}
